@@ -1721,32 +1721,57 @@ class CRUDTest(TestBase, AssertsCompiledSQL):
         self.assert_compile(u, "DELETE FROM mytable WHERE mytable.name = (SELECT myothertable.othername FROM myothertable WHERE myothertable.otherid = mytable.myid)")
     
     def test_binds_that_match_columns(self):
-        """test bind params named after column names replace the normal SET/VALUES generation."""
+        """test bind params named after column names 
+        replace the normal SET/VALUES generation."""
         
         t = table('foo', column('x'), column('y'))
 
         u = t.update().where(t.c.x==bindparam('x'))
+    
+        assert_raises(exc.CompileError, u.compile)
         
-        self.assert_compile(u, "UPDATE foo SET y=:y WHERE foo.x = :x")
         self.assert_compile(u, "UPDATE foo SET  WHERE foo.x = :x", params={})
-        self.assert_compile(u.values(x=7), "UPDATE foo SET x=:x WHERE foo.x = :x")
-        self.assert_compile(u.values(y=7), "UPDATE foo SET y=:y WHERE foo.x = :x")
-        self.assert_compile(u.values(x=7), "UPDATE foo SET x=:x, y=:y WHERE foo.x = :x", params={'x':1, 'y':2})
-        self.assert_compile(u, "UPDATE foo SET y=:y WHERE foo.x = :x", params={'x':1, 'y':2})
+
+        assert_raises(exc.CompileError, u.values(x=7).compile)
         
-        self.assert_compile(u.values(x=3 + bindparam('x')), "UPDATE foo SET x=(:param_1 + :x) WHERE foo.x = :x")
-        self.assert_compile(u.values(x=3 + bindparam('x')), "UPDATE foo SET x=(:param_1 + :x) WHERE foo.x = :x", params={'x':1})
-        self.assert_compile(u.values(x=3 + bindparam('x')), "UPDATE foo SET x=(:param_1 + :x), y=:y WHERE foo.x = :x", params={'x':1, 'y':2})
+        self.assert_compile(u.values(y=7), "UPDATE foo SET y=:y WHERE foo.x = :x")
+        
+        assert_raises(exc.CompileError, u.values(x=7).compile, column_keys=['x', 'y'])
+        assert_raises(exc.CompileError, u.compile, column_keys=['x', 'y'])
+        
+        self.assert_compile(u.values(x=3 + bindparam('x')), 
+                            "UPDATE foo SET x=(:param_1 + :x) WHERE foo.x = :x")
+
+        self.assert_compile(u.values(x=3 + bindparam('x')), 
+                            "UPDATE foo SET x=(:param_1 + :x) WHERE foo.x = :x",
+                            params={'x':1})
+
+        self.assert_compile(u.values(x=3 + bindparam('x')), 
+                            "UPDATE foo SET x=(:param_1 + :x), y=:y WHERE foo.x = :x",
+                            params={'x':1, 'y':2})
 
         i = t.insert().values(x=3 + bindparam('x'))
         self.assert_compile(i, "INSERT INTO foo (x) VALUES ((:param_1 + :x))")
-        self.assert_compile(i, "INSERT INTO foo (x, y) VALUES ((:param_1 + :x), :y)", params={'x':1, 'y':2})
+        self.assert_compile(i, 
+                            "INSERT INTO foo (x, y) VALUES ((:param_1 + :x), :y)",
+                            params={'x':1, 'y':2})
 
+        i = t.insert().values(x=bindparam('y'))
+        self.assert_compile(i, "INSERT INTO foo (x) VALUES (:y)")
+
+        i = t.insert().values(x=bindparam('y'), y=5)
+        assert_raises(exc.CompileError, i.compile)
+
+        i = t.insert().values(x=3 + bindparam('y'), y=5)
+        assert_raises(exc.CompileError, i.compile)
+        
         i = t.insert().values(x=3 + bindparam('x2'))
         self.assert_compile(i, "INSERT INTO foo (x) VALUES ((:param_1 + :x2))")
         self.assert_compile(i, "INSERT INTO foo (x) VALUES ((:param_1 + :x2))", params={})
-        self.assert_compile(i, "INSERT INTO foo (x, y) VALUES ((:param_1 + :x2), :y)", params={'x':1, 'y':2})
-        self.assert_compile(i, "INSERT INTO foo (x, y) VALUES ((:param_1 + :x2), :y)", params={'x2':1, 'y':2})
+        self.assert_compile(i, "INSERT INTO foo (x, y) VALUES ((:param_1 + :x2), :y)",
+                                    params={'x':1, 'y':2})
+        self.assert_compile(i, "INSERT INTO foo (x, y) VALUES ((:param_1 + :x2), :y)",
+                                    params={'x2':1, 'y':2})
         
 class InlineDefaultTest(TestBase, AssertsCompiledSQL):
     def test_insert(self):
